# CustomImageBuilder

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi.yaml
custom_image_builder/: image_builder.py
custom_image_builder/exception/: ImageBuilderException.py
example/: client.py  pyproject.toml  requirements.txt
example/config/: example_config.py
example/endpoint/config/: example_config.py
example/example/: client.py
example/example/config/: config.yaml
funcx/: client.py  register_image_builder.py
singularity/: demo.def
src/: README.md  pyproject.toml
src/custom_image_builder/: __init__.py  image_builder.py
src/custom_image_builder/exception/: RegisterImageException.py
src/tests/: test_image_builder.py
tests/: test_image_builder.py
