[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["ritwik-deshpande <ritwikdeshpande01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.18"
custom-image-builder = {path = "../src"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
