[tool.poetry]
name = "custom-image-builder"
version = "0.1.0"
description = ""
authors = ["ritwik-deshpande <ritwikdeshpande01@gmail.com>"]
readme = "README.md"
packages = [{include = "custom_image_builder"}]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
cryptography = "41.0.3"
globus-compute-common = "0.2.0"
globus-compute-sdk = "2.3.2"
globus-sdk = "3.27.0"
idna = "3.4"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.3"
packaging = "23.1"
pika = "1.3.2"
pycparser = "2.21"
pydantic = "1.10.12"
PyJWT = "2.8.0"
requests = "2.31.0"
tblib = "1.7.0"
texttable = "1.6.7"
typing_extensions = "4.7.1"
urllib3 = "2.0.4"
websockets = "10.3"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
